Changes to test Github Actions

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               alt=""
             />
             <h5>Cloud Resume Challenge</h5>
-            <p>Platform : AWS | Difficulty : Easy</p>
+            <p>Platform : AWS</p>
           </a>
           <!-- end of single project -->
           <!-- single project -->
@@ -83,7 +83,7 @@
               alt=""
             />
             <h5>Static Website Hosting</h5>
-            <p>Platform : AWS | Difficulty : Easy</p>
+            <p>Platform : AWS </p>
           </a>
           <!-- end of single project -->
           <!-- single project -->
@@ -94,7 +94,7 @@
               alt=""
             />
             <h5>Deploying a Website on EC2 Instance</h5>
-            <p>Platform : AWS | Difficulty : Easy</p>
+            <p>Platform : AWS </p>
           </a>
           <!-- end of single project -->
            <!-- single project -->
@@ -105,7 +105,7 @@
             alt=""
           />
           <h5>Deploying a Telegram bot using Google Cloud Function</h5>
-          <p>Platform : GCP | Difficulty : Easy</p>
+          <p>Platform : GCP </p>
         </a>
           <!-- end of single project -->
         </div>
