Added other projects and made edits

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main class="page">
       <section class="about-page">
         <article>
-          <h2>Hey I'm John Twasam and my aim is to Empower individual and companies to leverage the power of the Cloud</h2>
+          <h2>Hey I'm John Twasam and my aim is to Empower individual and companies to leverage the power of Cloud Computing</h2>
           <p>
           I am certified as a GCP Associate Cloud Engineer and Cloud Architect, and I also hold AWS Cloud Practitioner certification
           </p>
@@ -76,7 +76,7 @@
           </a>
           <!-- end of single project -->
           <!-- single project -->
-          <a href="project-detail.html" class="project">
+          <a href="project-detail0.html" class="project">
             <img
               src="./assets/projects/p2.png"
               class="img project-img"
@@ -87,7 +87,7 @@
           </a>
           <!-- end of single project -->
           <!-- single project -->
-          <a href="project-detail.html" class="project">
+          <a href="project-detail1.html" class="project">
             <img
               src="./assets/projects/P3.jpg"
               class="img project-img"
@@ -98,7 +98,7 @@
           </a>
           <!-- end of single project -->
            <!-- single project -->
-          <a href="project-detail.html" class="project">
+          <a href="project-detail2.html" class="project">
           <img
             src="./assets/projects/p7.jpg"
             class="img project-img"
