Updated article details

--- a/project-detail.html
+++ b/project-detail.html
@@ -60,7 +60,7 @@
               <article>
                 <i class="fas fa-globe"></i>
                 <h5>Portfolio Link</h5>
-                <p><a href="https://john.twasam">john.twasam</a></p>
+                <p><a href="https://johntwasam.xyz">Portfolio Link</a></p>
               </article>
               <article>
                 <i class="fas fa-trophy"></i>
