--- a/project-detail1.html
+++ b/project-detail1.html
@@ -53,19 +53,9 @@
             </p>
             <div class="project-icons">
               <article>
-                <i class="fab fa-github"></i>
-                <h5>GitHub Link</h5>
-                <p><a href="https://github.com">github.com</a></p>
-              </article>
-              <article>
                 <i class="fas fa-globe"></i>
-                <h5>Portfolio Link</h5>
-                <p><a href="https://john.twasam">john.twasam</a></p>
-              </article>
-              <article>
-                <i class="fas fa-trophy"></i>
-                <h5>Challenge Link</h5>
-                <p><a href="https://cloudresumechallenge.dev/">cloudresumechallenge.dev</a></p>
+                <h5>Project Link</h5>
+                <p><a href="http://34.254.186.119">EC2 Instance Link</a></p>
               </article>
             </div>
             <p class="project-tags">
@@ -84,7 +74,7 @@
                 <div></div>
               </header>
               <p>
-                Launch an EC2 instance using the AWS Management Console. Choose an appropriate AMI (e.g., Amazon Linux 2) and instance type (e.g., t2.micro for free tier eligibility).
+                Launch an EC2 instance using the AWS Management Console. Choose an appropriate AMI (e.g., Ubuntu 24.04 LTS) and instance type (e.g., t2.micro for free tier eligibility).
               </p>
             </div>
             <!-- end of single instruction -->
@@ -106,7 +96,7 @@
                 <div></div>
               </header>
               <p>
-                Use SSH to connect to your EC2 instance. On Linux Mac and windows ships with an SSH client, you can use the terminal.
+                Use SSH to connect to your EC2 instance. Linux, Mac and Windows ships with an SSH client, you can use their terminal.
               </p>
             </div>
             <!-- end of single instruction -->
@@ -117,7 +107,7 @@
                 <div></div>
               </header>
               <p>
-                Install a web server such as Apache or Nginx. For example, to install Apache, you can use the following command: <code>sudo yum install httpd -y</code>.
+                Install a web server such as Apache or Nginx. For example, to install Apache, you can use the following command: <code>sudo apt install apache2 -y</code>.
               </p>
             </div>
             <!-- end of single instruction -->
@@ -139,7 +129,7 @@
                 <div></div>
               </header>
               <p>
-                Start the web server using a command like <code>sudo systemctl start httpd</code>. Ensure the web server starts on boot by enabling it: <code>sudo systemctl enable httpd</code>.
+                Start the web server using a command like <code>sudo systemctl start apache2</code>. Ensure the web server starts on boot by enabling it: <code>sudo systemctl enable apache2</code>.
               </p>
             </div>
             <!-- end of single instruction -->
@@ -166,8 +156,8 @@
             <div>
               <h4>Services</h4>
               <p class="single-tool">EC2</p>
-              <p class="single-tool">Amazon Linux 2</p>
-              <p class="single-tool">Apache/Nginx</p>
+              <p class="single-tool">Ubuntu</p>
+              <p class="single-tool">Apache</p>
               <p class="single-tool">IAM</p>
             </div>
           </article>
