--- a/project-detail2.html
+++ b/project-detail2.html
@@ -54,18 +54,13 @@
             <div class="project-icons">
               <article>
                 <i class="fab fa-github"></i>
-                <h5>GitHub Link</h5>
-                <p><a href="https://github.com">github.com</a></p>
+                <h5>Source Code Link</h5>
+                <p><a href="https://github.com/tee-jay7/AWS_TelegramBot_SAM" target="_blank">Github</a></p>
               </article>
               <article>
-                <i class="fas fa-globe"></i>
-                <h5>Portfolio Link</h5>
-                <p><a href="https://john.twasam">john.twasam</a></p>
-              </article>
-              <article>
-                <i class="fas fa-trophy"></i>
-                <h5>Challenge Link</h5>
-                <p><a href="https://cloudresumechallenge.dev/">cloudresumechallenge.dev</a></p>
+                <i class="fab fa-telegram-plane"></i>
+                <h5>Telegram Bot API Link</h5>
+                <p><a href="https://core.telegram.org/bots/api#update" target="_blank">Telegram Api</a></p>
               </article>
             </div>
             <p class="project-tags">
