Added new projects

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main class="page">
       <section class="about-page">
         <article>
-          <h2>Hey I'm John Twasam and my aim is to Empower individual and companies to leverage the power of Cloud Computing</h2>
+          <h2>Hey I'm John Twasam and my aim is to empower individual and companies to leverage the power of Cloud Computing</h2>
           <p>
           I am certified as a GCP Associate Cloud Engineer and Cloud Architect, and I also hold AWS Cloud Practitioner certification
           </p>
@@ -104,7 +104,7 @@
             class="img project-img"
             alt=""
           />
-          <h5>Deploying a Telegram bot using Google Cloud Function</h5>
+          <h5>Deploying a Telegram Bot Using AWS Lambda</h5>
           <p>Platform : GCP </p>
         </a>
           <!-- end of single project -->
@@ -116,7 +116,7 @@
       <p>
         &copy; <span id="date"></span>
         <span class="footer-logo">John.Twasam </span>
-        <span id="views" class="footer-logo"></span> 
+        <span id="views" class="footer-logo views"></span> 
         <a href="#"></a>
       </p>
     </footer>
