--- a/project-detail.html
+++ b/project-detail.html
@@ -65,7 +65,7 @@
               <article>
                 <i class="fas fa-trophy"></i>
                 <h5>Challenge Link</h5>
-                <p><a href="https://cloudresumechallenge.dev/">cloudresumechallenge.dev</a></p>
+                <p><a href="https://cloudresumechallenge.dev/" target="_blank">cloudresumechallenge.dev</a></p>
               </article>
             </div>
             <p class="project-tags">
