--- a/project-detail0.html
+++ b/project-detail0.html
@@ -49,27 +49,22 @@
           <article class="project-info">
             <h2>Deploying a Static Website Using S3 Bucket</h2>
             <p>
-              In this project, you'll learn how to host a static website using an AWS S3 bucket. This method eliminates the need to manage a server, allowing you to focus on your website's content and design. By using Infrastructure as Code (IaC) with AWS SAM (Serverless Application Model), we will streamline the setup and deployment process, making it easier to implement a CI/CD pipeline. This approach is ideal for maintaining efficiency and adhering to industry standards.
+              In this project, I hosted a static website using an AWS S3 bucket. This method eliminates the need to manage a server, allowing you to focus on your website's content and design. By using Infrastructure as Code (IaC) with AWS SAM (Serverless Application Model), we will streamline the setup and deployment process, making it easier to implement a CI/CD pipeline. This approach is ideal for maintaining efficiency and adhering to industry standards.
             </p>
             <div class="project-icons">
               <article>
                 <i class="fab fa-github"></i>
                 <h5>Github link</h5>
-                <p>github.com</p>
+                <p><a href="https://github.com/tee-jay7/portfolio-site" target="_blank">github.com</a></p>
               </article>
               <article>
                 <i class="fas fa-globe"></i>
-                <h5>Portfolio link</h5>
-                <p>john.twasam</p>
-              </article>
-              <article>
-                <i class="fas fa-trophy"></i>
-                <h5>Challenge link</h5>
-                <p>https://cloudresumechallenge.dev/</p>
+                <h5>Telegram Bot API Link</h5>
+                <p><a href="http://johntwasam.xyz.s3-website-eu-west-1.amazonaws.com" target="_blank">Portfolio Link</a></p>
               </article>
             </div>
             <p class="project-tags">
-              Technologies: <a href="#">HTML</a> <a href="#">CSS</a> <a href="#">JavaScript</a>
+              Technologies: <a href="#">HTML</a> <a href="#">CSS</a> <a href="#">JavaScript</a> <a href="#">Amazon S3 Bucket</a>
             </p>
           </article>
         </section>
