--- a/project-detail1.html
+++ b/project-detail1.html
@@ -45,7 +45,7 @@
     <main class="page">
       <div class="project-page">
         <section class="project-hero">
-          <img src="./assets/projects/p3.jpg" class="img project-hero-img" />
+          <img src="./assets/projects/P3.jpg" class="img project-hero-img" />
           <article class="project-info">
             <h2>Deploying a Static Website on an EC2 Instance</h2>
             <p>
@@ -53,9 +53,14 @@
             </p>
             <div class="project-icons">
               <article>
+                <i class="fab fa-github"></i>
+                <h5>Github link</h5>
+                <p><a href="https://github.com/tee-jay7/portfolio-site" target="_blank">github.com</a></p>
+              </article>
+              <article>
                 <i class="fas fa-globe"></i>
                 <h5>Project Link</h5>
-                <p><a href="http://34.254.186.119">EC2 Instance Link</a></p>
+                <p><a href="http://34.254.186.119" target="_blank">EC2 Instance Link</a></p>
               </article>
             </div>
             <p class="project-tags">
